<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F04D52"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="5" >

        <EditText
            android:id="@+id/et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/edittextstyle"
            android:gravity="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="4"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#71BCDA"
        android:ems="9"
        android:gravity="center"
        android:text="@string/bt1"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#71BCDA"
        android:ems="9"
        android:gravity="center"
        android:text="@string/bt2"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#71BCDA"
        android:ems="9"
        android:gravity="center"
        android:text="@string/bt3"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="#674576"
        android:ems="8"
        android:gravity="center"
        android:text="@string/bt4"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>